--- a/Web.config
+++ b/Web.config
@@ -12,6 +12,6 @@
       <httpRuntime targetFramework="4.5" />
     </system.web>
   <connectionStrings>
-    <add name="CommunityAssistConnectionString" connectionString="Data Source=localhost; initial catalog=CommunityAssist;user=DonorLoginUser; password=MasterBlaster"/>    
+    <add name="CommunityAssistConnectionString" connectionString="Data Source=localhost; initial catalog=CommunityAssist;user=DonorLogin; password=P@ssw0rd1"/>    
   </connectionStrings>
 </configuration>
